--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
 <body>
 <h1> Hello World </h1>
 <p> I'm hosted with GitHub Pages. </p>
-<iframe src="name.html"></iframe>
+<iframe src="flashCard.html"></iframe>
 </body>
 </html>
