--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
 <body>
 <h1> Hello World </h1>
 <p> I'm hosted with GitHub Pages. </p>
-<iframe src="flashCard.html" style="width:400px; height:800px; border:none;"></iframe>
+<iframe src="flashCard.html" style="height:200px;width:300px;"></iframe>
 </body>
 </html>
