--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1> Hello World </h1>
-<p> I'm hosted with GitHub Pages. </p>
+<h1> Math Practice Flash Cards </h1>
+<p> The first card </p>
 <iframe src="flashCard.html" style="height:200px;width:300px;"></iframe>
 </body>
 </html>
