--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
 <body>
 <h1> Math Practice Flash Cards </h1>
 <p> The first card </p>
-<iframe src="flashCard.html" style="height:200px;width:300px;"></iframe>
+<iframe src="flashCard.html" style="height:400px;width:400px; border:none"></iframe>
 </body>
 </html>
