--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
 <body>
 <h1> Math Practice Flash Cards </h1>
-<p> The first card </p>
-<iframe src="flashCard.html" style="height:400px;width:400px; border:none"></iframe>
+<p>
+  <a href="flashCard.html">The first card</a> 
+</p>
 </body>
 </html>
