--- a/index.html
+++ b/index.html
@@ -1,7 +1,20 @@
 <!DOCTYPE html>
 <html>
+<head>
+  <title> Math Practice Flash Cards </title>
+  <script>
+  MathJax = {
+  loader: {load: ['input/asciimath', 'output/chtml']}
+  }
+  </script>
+  <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
+  <script type="text/javascript" id="MathJax-script" async
+    src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/startup.js">
+  </script>
+</head>
 <body>
-<h1> Hello World </h1>
-<p> I'm hosted with GitHub Pages. </p>
+  <div>
+  <a href="flashCard.html"> The first card </a>
+  </div>
 </body>
 </html>
