--- a/index.html
+++ b/index.html
@@ -17,9 +17,6 @@ MathJax = {
 </head>
   
 <body>
-<h1> Math Practice Flash Cards </h1>
-<p>
-  <a href="flashCard.html">The first card</a> 
-</p>
+  <iframe src="flashCard.html" style="width:400px; height:400px; border:none;> </iframe>
 </body>
 </html>
