--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@ MathJax = {
 </head>
   
 <body>
+  <h1> Math Practice Flash Cards </h1>
   <iframe src="flashCard.html" style="width:400px; height:400px; border:none;> </iframe>
 </body>
 </html>
