--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@ MathJax = {
   
 <body>
   <h1> Math Practice Flash Cards </h1>
+  <a href="flashCard.html"> The first flash card </a>
   <iframe src="flashCard.html" style="width:400px; height:400px; border:none;> </iframe>
 </body>
 </html>
