--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@ MathJax = {
 <script type="text/javascript" id="MathJax-script" async
   src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/startup.js">
 </script>
+  <link rel="stylesheet" href="flashCard.css">
 </head>
   
 <body>
