--- a/flashCard.html
+++ b/flashCard.html
@@ -1,5 +1,6 @@
 <html>
-
+<link rel="stylesheet" href="styles.css">
+ 
 <div id="demo">
 <p style="text-align: center;"> Problem </p>
 <p> 29. A batch of salad dressing requires `1 2/3` cups of olive oil, `1/2` cup of vinegar, and `3/4` cup of water. How many cups of salad dressing will this recipe produce? </p>
