--- a/flashCard.html
+++ b/flashCard.html
@@ -1,6 +1,16 @@
 <html>
-<link rel="stylesheet" href="styles.css">
- 
+<head>
+<script>
+MathJax = {
+  loader: {load: ['input/asciimath', 'output/chtml']}
+}
+</script>
+<script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
+<script type="text/javascript" id="MathJax-script" async
+  src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/startup.js">
+</script> 
+</head>
+<body>
 <div id="demo">
 <p style="text-align: center;"> Problem </p>
 <p> 29. A batch of salad dressing requires `1 2/3` cups of olive oil, `1/2` cup of vinegar, and `3/4` cup of water. How many cups of salad dressing will this recipe produce? </p>
@@ -38,4 +48,5 @@ function showProblem() {
   document.getElementById("answer").style.display = "none";
 }
 </script>
+</body>
 </html>
