--- a/flashCard.html
+++ b/flashCard.html
@@ -9,6 +9,7 @@ MathJax = {
 <script type="text/javascript" id="MathJax-script" async
   src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/startup.js">
 </script> 
+<link rel="stylesheet" href="flashcard.css" type="text/css">
 </head>
 <body>
 <div id="demo">
