--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
 <body>
   <h1> Math Practice Flash Cards </h1>
   <a href="flashCard.html"> The first flash card </a>
-  <iframe src="www.math4parents.net" style="width:400px; height:400px; border:none;> </iframe>
+  <iframe src="flashCard.html" style="width:400px; height:400px; border:none;"> </iframe>
 </body>
 </html>
