--- a/flashCard.html
+++ b/flashCard.html
@@ -34,8 +34,8 @@ C. `2 11/12` <br> <br>
 </p>
 </div>
 
-<script>
-document.getElementById("problem").addEventListener("mousedown", showAnswer);
+<script src="flashcard.js">
+/* document.getElementById("problem").addEventListener("mousedown", showAnswer);
 document.getElementById("answer").addEventListener("mouseout", showProblem);
 
 function showAnswer() {
@@ -47,6 +47,6 @@ function showProblem() {
   document.getElementById("problem").style.display = "block";
   document.getElementById("answer").style.display = "none";
 }
-</script>
+*/
 </body>
 </html>
