--- a/flashCard.html
+++ b/flashCard.html
@@ -34,7 +34,7 @@ C. `2 11/12` <br> <br>
 </p>
 </div>
 
-<script src="flashcard.js">
+<script src="flashCard.js">
 /* document.getElementById("problem").addEventListener("mousedown", showAnswer);
 document.getElementById("answer").addEventListener("mouseout", showProblem);
 
