--- a/flashCard.html
+++ b/flashCard.html
@@ -10,7 +10,7 @@ MathJax = {
   src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/startup.js">
 </script> 
 <link rel="stylesheet" href="flashcard.css" type="text/css">
-<script src="flashCard.js">
+<script src="flashCard.js"> </script>
 </head>
 <body>
 <div id="problem">
