--- a/flashCard.html
+++ b/flashCard.html
@@ -10,7 +10,7 @@ MathJax = {
   src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/startup.js">
 </script> 
 <link rel="stylesheet" href="flashcard.css" type="text/css">
-<script src="flashCard.js"> </script>
+<!-- <script src="flashCard.js"> </script> -->
 </head>
 <body>
 <div id="problem">
@@ -35,8 +35,7 @@ C. `2 11/12` <br> <br>
 </p>
 </div>
 
-
-/* document.getElementById("problem").addEventListener("mousedown", showAnswer);
+document.getElementById("problem").addEventListener("mousedown", showAnswer);
 document.getElementById("answer").addEventListener("mouseout", showProblem);
 
 function showAnswer() {
@@ -48,6 +47,5 @@ function showProblem() {
   document.getElementById("problem").style.display = "block";
   document.getElementById("answer").style.display = "none";
 }
-*/
 </body>
 </html>
