--- a/flashCard.html
+++ b/flashCard.html
@@ -34,7 +34,7 @@ C. `2 11/12` <br> <br>
 
 </p>
 </div>
-
+<script>
 document.getElementById("problem").addEventListener("mousedown", showAnswer);
 document.getElementById("answer").addEventListener("mouseout", showProblem);
 
@@ -47,5 +47,6 @@ function showProblem() {
   document.getElementById("problem").style.display = "block";
   document.getElementById("answer").style.display = "none";
 }
+</script>
 </body>
 </html>
