--- a/flashCard.html
+++ b/flashCard.html
@@ -34,7 +34,7 @@ C. `2 11/12` <br> <br>
 
 </p>
 </div>
-<script src="flashCard.js"> </script>
+<script type="text/javascript" src="flashCard.js"> </script>
 <script>
 /* 
 document.getElementById("problem").addEventListener("mousedown", showAnswer);
