--- a/flashCard.html
+++ b/flashCard.html
@@ -12,27 +12,39 @@ MathJax = {
 <link rel="stylesheet" href="flashcard.css" type="text/css">
 <!-- <script src="flashCard.js"> </script> -->
 </head>
+  
 <body>
 <div id="problem">
+  
 <p style="text-align: center;"> Problem </p>
-<p> 29. A batch of salad dressing requires `1 2/3` cups of olive oil, `1/2` cup of vinegar, and `3/4` cup of water. How many cups of salad dressing will this recipe produce? </p>
-<p> 
+  
+<p> <!-- Problem statement -->
+  29. A batch of salad dressing requires `1 2/3` cups of olive oil, 
+  `1/2` cup of vinegar, and `3/4` cup of water. 
+  How many cups of salad dressing will this recipe produce? 
+</p>
+  
+<p> <!-- Mutliple choices -->
 A. `1 2/3` <br>
 B. `2 5/6` <br>
 C. `2 11/12` <br>
 D. `3 7/12`
 </p>
 </div>
+  
+<-- The answer card -->
 <div id="answer" style="display:none">
-<p>
+
 <p style="text-align: center;"> Solution </p>
+
+<p> <!-- The answer -->
 C. `2 11/12` <br> <br>
 `1 2/3 + 1/2 + 3/4 = 1 2/3 + (1/2)*(2/2) + 3/4` <br>
 `= 1 2/3 + 2/4 + 3/4 = 1 2/3 + 5/4` <br>
 `= 1 2/3 + 1 1/4 = \(1+1\) + 2/3 + 1/4 = 2 + (2*4 + 3*1)/(3*4)` <br>
 `= 2 + 11/12 = 2 11/12`
-
 </p>
+  
 </div>
   
 <script type="text/javascript" src="flashCard.js"> </script>
