--- a/flashCard.html
+++ b/flashCard.html
@@ -32,7 +32,7 @@ D. `3 7/12`
 </p>
 </div>
   
-<-- The answer card -->
+<!-- The answer card -->
 <div id="answer" style="display:none">
 
 <p style="text-align: center;"> Solution </p>
@@ -41,7 +41,8 @@ D. `3 7/12`
 C. `2 11/12` <br> <br>
 `1 2/3 + 1/2 + 3/4 = 1 2/3 + (1/2)*(2/2) + 3/4` <br>
 `= 1 2/3 + 2/4 + 3/4 = 1 2/3 + 5/4` <br>
-`= 1 2/3 + 1 1/4 = \(1+1\) + 2/3 + 1/4 = 2 + (2*4 + 3*1)/(3*4)` <br>
+`= 1 2/3 + 1 1/4 = \(1+1\) + 2/3 + 1/4` <br>
+`= 2 + (2*4 + 3*1)/(3*4)` <br>
 `= 2 + 11/12 = 2 11/12`
 </p>
   
