--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <title>Math Practice Flash Cards</title>
   <link href='https://fonts.googleapis.com/css?family=Sofia' rel='stylesheet'>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" type="text/css" href="flashcard.css" >
+<!--  <link rel="stylesheet" type="text/css" href="flashcard.css" > -->
 </head>
   
 <body>
