--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   
 <body>
   <h1> Math Practice Flash Cards </h1>
-  <a href="flashCard.html"> The first flash card </a>
-  <iframe src="flashCard.html" style="width:400px; height:400px; border:none;"> </iframe>
+  <a href="flashCard.html"> The first flash card </a> <br><br>
+  <iframe src="flashCard.html" style="width:500px; height:500px; border:none;"> </iframe>
 </body>
 </html>
