--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
   
 <body>
-  <h1> Math Practice Flash Cards </h1>
-  <a href="flashCard.html"> The first flash card </a> <br><br>
+  <h1> TASC Math Flash Cards </h1>
   <iframe src="flashCard.html" style="width:500px; height:500px; border:none;"> </iframe>
+  <iframe src="flashCard27.html" style="width:500px; height:500px; border:none;"> </iframe>
 </body>
 </html>
