--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
   
 <body>
   <h1> TASC Math Flash Cards </h1>
-  <iframe src="flashCard.html" style="width:500px; height:500px; border:none;"> </iframe>
+ 
+  <iframe src="flashCard26.html" style="width:500px; height:500px; border:none;"> </iframe>
   <iframe src="flashCard27.html" style="width:500px; height:500px; border:none;"> </iframe>
+  <iframe src="flashCard.html" style="width:500px; height:500px; border:none;"> </iframe>
 </body>
 </html>
