--- a/flashCard27.html
+++ b/flashCard27.html
@@ -17,6 +17,7 @@ MathJax = {
 <body>
 <div id="problem">
 <p> <!-- Problem statement -->
+<p style="text-align: center;"> Problem </p>
   <p> 27. Carol will use two bolts to assemble a book cart. 
   Bolt A is `2 7/8` inches long, bolt B is `1 1/4` inches long. 
   How much longer, in inches, is bolt A than bolt B? 
