--- a/flashCard26.html
+++ b/flashCard26.html
@@ -17,7 +17,7 @@ MathJax = {
 </script>
 <body>
 
-<div id="demo">
+<div id="problem">
 <p> 26. To make the top of a dining room table, Craig glues a piece of oak that is `5 / 16` inch thick to a piece of pine that is `7 / 8` inch thick. What is the total thickness, in inches, of the tabletop? </p>
 <p> 
 A. `9 / 16` <br> <br>
