--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
  
   <iframe src="flashCard26.html" style="width:500px; height:500px; border:none;"> </iframe>
   <iframe src="flashCard27.html" style="width:500px; height:500px; border:none;"> </iframe>
+  <iframe src="flashCard27.html" style="width:500px; height:500px; border:none;"> </iframe>
   <iframe src="flashCard.html" style="width:500px; height:500px; border:none;"> </iframe>
 </body>
 </html>
