--- a/flashCard26.html
+++ b/flashCard26.html
@@ -40,7 +40,7 @@ There are two ways to solve this problem: <br>
 </p>
 </div>
 
-<script src="flashcard.js" type="text/script"> </script>
+<script src="flashCard.js" type="text/script"> </script>
 
 </body>
 </html>
