--- a/flashCard26.html
+++ b/flashCard26.html
@@ -42,8 +42,8 @@ There are two ways to solve this problem: <br>
 `= 19/16 = 1 3/16`
 </p>
 </div>
-
-<script src="flashCard.js" type="text/script"> </script>
+  
+<script src="flashCard.js" type="text/javascript"> </script>
 
 </body>
 </html>
