--- a/flashCard28.html
+++ b/flashCard28.html
@@ -39,7 +39,7 @@ C. `14 3/8` <br> <br>
 </p>
 </div>
 
-<script src="flashCard.js" type="text/script"> </script>
+<script src="flashCard.js" type="text/javascript"> </script>
 
 </body>
 </html>
