--- a/flashCard28.html
+++ b/flashCard28.html
@@ -15,9 +15,11 @@ MathJax = {
 <script type="text/javascript" id="MathJax-script" async
   src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/startup.js">
 </script>
+</hed>
+
 <body>
 
-<div id="demo">
+<div id="problem">
 <p style="text-align: center;"> Problem </p>
 <p> 28. At a fabric store, Melissa sold `8 7/8` yards of cloth to a customer. If the material was cut from a bolt of fabric containing `23 1/4` yards, how many yards are left on the bolt? </p>
 <p> 
@@ -40,6 +42,5 @@ C. `14 3/8` <br> <br>
 </div>
 
 <script src="flashCard.js" type="text/javascript"> </script>
-
 </body>
 </html>
