--- a/flashCard27.html
+++ b/flashCard27.html
@@ -1,6 +1,7 @@
 <html>
 <head>
   <title> TASC Math Prep </title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <script>
 MathJax = {
   loader: {load: ['input/asciimath', 'output/chtml']}
@@ -10,6 +11,8 @@ MathJax = {
 <script type="text/javascript" id="MathJax-script" async
   src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/startup.js">
 </script> 
+<link href='https://fonts.googleapis.com/css?family=Sofia' rel='stylesheet'>
+
 <link rel="stylesheet" href="flashcard.css" type="text/css">
 <!-- <script src="flashCard.js"> </script> -->
 </head>
