--- a/flashCard26.html
+++ b/flashCard26.html
@@ -18,6 +18,7 @@ MathJax = {
 <body>
 
 <div id="problem">
+<p style="text-align: center;"> Problem </p>
 <p> 26. To make the top of a dining room table, 
   Craig glues a piece of oak that is `5 / 16` inch thick to a piece of pine that is `7 / 8` inch thick. 
   What is the total thickness, in inches, of the tabletop? 
@@ -32,12 +33,6 @@ D. `1 9/16`
 <div id="answer" style="display:none">
 <p>
 B. `1 3/16` <br> <br>
-There are two ways to solve this problem: <br>
-1) <br>
-  `5/16 + 7/8 = (5*8 + 7*16)/(16*8)` <br> <br>
-` = (40 + 112)/128 = (152 -: 8)/(128 -: 8)` <br> <br>
-`= 19/16 = 1 3/16` <br> <br>
-2) <br>
   `5/16 + 7/8 = 5/16 + 14/16` <br><br>
 `= 19/16 = 1 3/16`
 </p>
