--- a/flashCard.html
+++ b/flashCard.html
@@ -10,6 +10,7 @@ MathJax = {
 <script type="text/javascript" id="MathJax-script" async
   src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/startup.js">
 </script> 
+<link href='https://fonts.googleapis.com/css?family=Sofia' rel='stylesheet'>
 <link rel="stylesheet" href="flashcard.css" type="text/css">
 <!-- <script src="flashCard.js"> </script> -->
 </head>
