--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
   <link href='https://fonts.googleapis.com/css?family=Sofia' rel='stylesheet'>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <!--  <link rel="stylesheet" type="text/css" href="flashcard.css" > -->
+  <style>
+    body {
+      background-color:lightgreen;
+    }
+  </style>
 </head>
   
 <body>
