--- a/flashCard26.html
+++ b/flashCard26.html
@@ -31,6 +31,7 @@ D. `1 9/16`
 </p>
 </div>
 <div id="answer" style="display:none">
+<p style="text-align: center;"> Solution </p>
 <p>
 B. `1 3/16` <br> <br>
   `5/16 + 7/8 = 5/16 + 14/16` <br><br>
