--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
   
 <body>
-  <h1> TASC Math Flash Cards </h1>
+  <h1> Math Cards </h1>
  
   <iframe src="flashCard26.html" style="width:500px; height:600px; border:none;"> </iframe>
   <iframe src="flashCard27.html" style="width:500px; height:600px; border:none;"> </iframe>
