--- a/tasc-math/tms2p4-1prob26card.html
+++ b/tasc-math/tms2p4-1prob26card.html
@@ -4,7 +4,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link href='https://fonts.googleapis.com/css?family=Sofia' rel='stylesheet'>
 
-<link rel="stylesheet" href="../../flashcard.css" type="text/css"> </link>
+<link rel="stylesheet" href="https://pingnan.github.io/flashcard.css" type="text/css"> </link>
 
 <script>
 MathJax = {
