--- a/tasc-math/tms2p4-1prob26card.html
+++ b/tasc-math/tms2p4-1prob26card.html
@@ -39,7 +39,7 @@ B. `1 3/16` <br> <br>
 </p>
 </div>
   
-<script src="../../flashCard.js" type="text/javascript"> </script>
+<script src="https://pingnan.github.io/flashCard.js" type="text/javascript"> </script>
 
 </body>
 </html>
