--- a/tasc-math/tms2p4-1prob27card.html
+++ b/tasc-math/tms2p4-1prob27card.html
@@ -1,1 +1,50 @@
+<html>
+<head>
+  <title> TASC Math Prep </title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<script>
+MathJax = {
+  loader: {load: ['input/asciimath', 'output/chtml']}
+}
+</script>
+<script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
+<script type="text/javascript" id="MathJax-script" async
+  src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/startup.js">
+</script> 
+<link href='https://fonts.googleapis.com/css?family=Sofia' rel='stylesheet'>
 
+<link rel="stylesheet" href="https://pingnan.github.io/flashcard.css" type="text/css">
+<!-- <script src="flashCard.js"> </script> -->
+</head>
+  
+<body>
+<div id="problem">
+<p> <!-- Problem statement -->
+<p style="text-align: center;"> Problem </p>
+  <p> 27. Carol will use two bolts to assemble a book cart. 
+  Bolt A is `2 7/8` inches long, bolt B is `1 1/4` inches long. 
+  How much longer, in inches, is bolt A than bolt B? 
+</p>
+<p> <!-- Mutliple choices -->
+A. `5/8` <br>
+B. `1 3/8` <br>
+C. `1 5/8` <br>
+D. `1 3/4`
+</p>
+</div>
+  
+<!-- The answer card -->
+<div id="answer" style="display:none">
+<p style="text-align: center;"> Solution </p>
+<p> <!-- The Solution -->
+C. `1 5/8` <br> <br>
+`2 7/8 - 1 1/4 = \(2-1\) + \(7/8-1/4\)` <br><br>
+`=1+7/8 - (1*2)/(4*2) = 1 + 7/8 - 2/8` <br><br>
+`=1 + (7-2)/8 = 1 + 5/8 = 1 5/8`
+</p>
+</div>
+  
+<script type="text/javascript" src="https://pingnan.github.io/flashCard.js"> </script>
+
+</body>
+</html>
