--- a/tasc-math/tms2p4-1prob28card.html
+++ b/tasc-math/tms2p4-1prob28card.html
@@ -4,7 +4,7 @@
 <link href='https://fonts.googleapis.com/css?family=Sofia' rel='stylesheet'>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<link rel="stylesheet" href="flashcard.css" type="text/css"> </link>
+<link rel="stylesheet" href="https://pingnan.github.io/flashcard.css" type="text/css"> </link>
 
 <script>
 MathJax = {
@@ -42,6 +42,6 @@ C. `14 3/8` <br> <br>
 </p>
 </div>
 
-<script src="flashCard.js" type="text/javascript"> </script>
+<script src="https://pingnan.github.io/flashCard.js" type="text/javascript"> </script>
 </body>
 </html>
