--- a/tasc-math/tms2p4-1prob29card.html
+++ b/tasc-math/tms2p4-1prob29card.html
@@ -1,1 +1,56 @@
+<html>
+<head>
+  <title> TASC Math Prep </title>
+<script>
+MathJax = {
+  loader: {load: ['input/asciimath', 'output/chtml']}
+}
+</script>
+<script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
+<script type="text/javascript" id="MathJax-script" async
+  src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/startup.js">
+</script> 
+<link href='https://fonts.googleapis.com/css?family=Sofia' rel='stylesheet'>
+<link rel="stylesheet" href="https://pingnan.github.io/flashcard.css" type="text/css">
+<!-- <script src="flashCard.js"> </script> -->
+</head>
+  
+<body>
+<div id="problem">
+  
+<p style="text-align: center;"> Problem </p>
+  
+<p> <!-- Problem statement -->
+  29. A batch of salad dressing requires `1 2/3` cups of olive oil, 
+  `1/2` cup of vinegar, and `3/4` cup of water. 
+  How many cups of salad dressing will this recipe produce? 
+</p>
+  
+<p> <!-- Mutliple choices -->
+A. `1 2/3` <br>
+B. `2 5/6` <br>
+C. `2 11/12` <br>
+D. `3 7/12`
+</p>
+</div>
+  
+<!-- The answer card -->
+<div id="answer" style="display:none">
 
+<p style="text-align: center;"> Solution </p>
+
+<p> <!-- The answer -->
+C. `2 11/12` <br> <br>
+`1 2/3 + 1/2 + 3/4 = 1 2/3 + (1/2)*(2/2) + 3/4` <br> <br>
+`= 1 2/3 + 2/4 + 3/4 = 1 2/3 + 5/4` <br> <br>
+`= 1 2/3 + 1 1/4 = \(1+1\) + 2/3 + 1/4` <br> <br>
+`= 2 + (2*4 + 3*1)/(3*4)` <br> <br>
+`= 2 + 11/12 = 2 11/12`
+</p>
+  
+</div>
+  
+<script type="text/javascript" src="https://pingnan.github.io/flashCard.js"> </script>
+
+</body>
+</html>
