--- a/tasc-math/index.html
+++ b/tasc-math/index.html
@@ -16,8 +16,8 @@
   <h1> TASC Math Flash Cards </h1>
  
   <iframe src="tms2p4-1prob26card.html" style="width:500px; height:600px; border:none;"> </iframe>
-  <iframe src="flashCard27.html" style="width:500px; height:600px; border:none;"> </iframe>
-  <iframe src="flashCard28.html" style="width:500px; height:600px; border:none;"> </iframe>
-  <iframe src="flashCard.html" style="width:500px; height:600px; border:none;"> </iframe>
+  <iframe src="tms2p4-1prob27card.html" style="width:500px; height:600px; border:none;"> </iframe>
+  <iframe src="tms2p4-1prob28card.html" style="width:500px; height:600px; border:none;"> </iframe>
+  <iframe src="tms2p4-1prob29card.html" style="width:500px; height:600px; border:none;"> </iframe>
 </body>
 </html>
