--- a/tasc-math/index.html
+++ b/tasc-math/index.html
@@ -7,7 +7,8 @@
 
   <style>
     body {
-      background-color:lightgreen;
+ /*     background-color:lightgreen; */
+      background-image: url(".gif");
     }
     h1, h2 {
       text-align: center;
