--- a/tasc-math/index.html
+++ b/tasc-math/index.html
@@ -8,7 +8,7 @@
   <style>
     body {
  /*     background-color:lightgreen; */
-      background-image: url(".gif");
+      background-image: url("jason-leung-Xaanw0s0pMk-unsplash.jpg");
     }
     h1, h2 {
       text-align: center;
