--- a/tasc-math/index.html
+++ b/tasc-math/index.html
@@ -8,7 +8,7 @@
   <style>
     body {
       background-color:lightblue; 
-/*      background-image: url("https://pingnan.github.io/tasc-math/alex-ZR48YvUpk04-unsplash.jpg");
+/*      background-image: url("https://pingnan.github.io/tasc-math/alex-ZR48YvUpk04-unsplash.jpg"); */
     }
     h1, h2 {
       text-align: center;
