--- a/index.html
+++ b/index.html
@@ -9,15 +9,26 @@
     body {
       background-color:lightgreen;
     }
+    h1, h2 {
+      text-align: center;
+    }
   </style>
 </head>
   
 <body>
-  <h1> TASC Math Flash Cards </h1>
+  <h1> Poema Academy </h1>
+  <h2> Classical Math Education for Every God's Child <h2>
  
-  <iframe src="flashCard26.html" style="width:500px; height:600px; border:none;"> </iframe>
-  <iframe src="flashCard27.html" style="width:500px; height:600px; border:none;"> </iframe>
-  <iframe src="flashCard28.html" style="width:500px; height:600px; border:none;"> </iframe>
-  <iframe src="flashCard.html" style="width:500px; height:600px; border:none;"> </iframe>
+  <div class="classes">
+    <p> Free online classes </p>
+  </div>
+    
+  <div class="textbooks">
+    <p> Free textbooks </p>
+  </div>
+    
+  <div class="flashcards">
+    <p> Flash cards </p>
+  </div>
 </body>
 </html>
