--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 <!--  <link rel="stylesheet" type="text/css" href="flashcard.css" > -->
   <style>
     body {
-      background-color:lightgreen;
+      background-color:lightblue;
     }
-    h1, h2 {
+    h1, h2, h3 {
       text-align: center;
     }
   </style>
@@ -17,7 +17,7 @@
   
 <body>
   <h1> Poema Academy </h1>
-  <h2> Classical Math Education for Every God's Child <h2>
+  <h3> Classical Math Education for Every God's Child <h3>
  
   <div class="classes">
     <p> Free online classes </p>
