--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Math Practice Flash Cards</title>
+  <title>Poema Academy</title>
   <link href='https://fonts.googleapis.com/css?family=Sofia' rel='stylesheet'>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <!--  <link rel="stylesheet" type="text/css" href="flashcard.css" > -->
