--- a/arithmetic/index.html
+++ b/arithmetic/index.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>W3.CSS</title>
+<title>Arithmetic</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<style>
+  h1 {font-size: 32px;}
+</style>
+    
 </head>
 <body>
 <div class="w3-container">
