--- a/arithmetic/index.html
+++ b/arithmetic/index.html
@@ -4,13 +4,17 @@
 <title>Arithmetic</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Tangerine">
 <style>
+.w3-tangerine {
+  font-family: "Tangerine", serif;
+}
   h1 {font-size: 32px;}
 </style>
     
 </head>
 <body>
-<div class="w3-container">
+<div class="w3-container w3-tangerine">
 <h1> Introduction </h1>
 <h1> Chapter I: Addition </h1>
 <h1> Chapter II: Subtraction </h1>
