--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
   <title>Poema Academy</title>
   <link href='https://fonts.googleapis.com/css?family=Sofia' rel='stylesheet'>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<!--  <link rel="stylesheet" type="text/css" href="flashcard.css" > -->
+  <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Tangerine"> 
   <style>
+    .w3-tangerine {
+      font-family: "Tangerine", serif;
+    }
     body {
       background-color:lightblue;
     }
@@ -16,6 +19,7 @@
 </head>
   
 <body>
+  <div class="w3-container w3-tangerine">
   <h1> Poema Academy </h1>
   <h3> Classical Math Education for Every God's Child <h3>
  
@@ -30,5 +34,6 @@
   <div class="flashcards">
     <p> Flash cards </p>
   </div>
+    </div>
 </body>
 </html>
