--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <h3> Classical Math Education for Every God's Child <h3>
  
   <div class="w3-card-4" style="width:33%">
-    <img src="onlineClasses.jpg" alt="online classes" style="width:100%>
+    <img src="onlineClasses.jpg" alt="online classes" style="width:400px; height:500px;">
     <p> Free online classes </p>
   </div>
     
