--- a/index.html
+++ b/index.html
@@ -20,9 +20,11 @@
   <h1> Poema Academy </h1>
   <h3> Classical Math Education for Every God's Child <h3>
  
-  <div class="w3-card-4" style="width:33%">
-    <img src="onlineClasses.jpg" alt="online classes" style="width:400px; height:500px;">
+  <div class="w3-card-4" style="width:50%">
+    <img src="onlineClasses.jpg" alt="online classes" style="width:100%">
+    <div class="w3-container">
     <p> Free online classes </p>
+    </div>
   </div>
     
   <div class="textbooks">
