--- a/index.html
+++ b/index.html
@@ -17,15 +17,17 @@
   
 <body>
   <div class="w3-container w3-tangerine">
-  <h1> Poema Academy </h1>
-  <h3> Classical Math Education for Every God's Child <h3>
+    <header>
+      <h1> Poema Academy </h1>
+      <h3> Classical Math Education for Every God's Child <h3>
+    </header>
  
-  <div class="w3-card-4" style="width:50%">
-    <img src="onlineClasses.jpg" alt="online classes" style="width:100%">
-    <div class="w3-container">
-    <p> Free online classes </p>
+    <div class="w3-card-4" style="width:50%">
+      <img src="onlineClasses.jpg" alt="online classes" style="width:100%">
+      <div class="w3-container">
+        <p> Free online classes </p>
+      </div>
     </div>
-  </div>
     
   <div class="textbooks">
     <p> Free textbooks </p>
