--- a/index.html
+++ b/index.html
@@ -17,16 +17,17 @@
   
 <body>
   <div class="w3-container w3-tangerine">
-    <header>
+    <header class=">
       <h1> Poema Academy </h1>
       <h3> Classical Math Education for Every God's Child <h3>
     </header>
  
-    <div class="w3-card-4" style="width:50%">
+    <div class="w3-row w3-card-4 w3-third">
       <img src="onlineClasses.jpg" alt="online classes" style="width:100%">
       <div class="w3-container">
         <p> Free online classes </p>
       </div>
+                               
     </div>
     
   <div class="textbooks">
