--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <div class="w3-card-4" style="width: 50%">
       <img src="onlineClasses.jpg" alt="online classes" style="width:100%">
       <div class="w3-container">
-        <p> Free online classes </p>
+        <p class="w3-center"> Free online classes </p>
       </div>
      </div>
                                
