--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
  
     <div class="w3-row">
                        
-    <div class="w3-card-4" style="width: 50%">
+    <div class="w3-card-4" style="width:30%">
       <img src="onlineClasses.jpg" alt="online classes" style="width:100%">
       <div class="w3-container">
         <p class="w3-center"> Free online classes </p>
@@ -38,9 +38,9 @@
         </div>
       </div>
                                  
-     <div class="w3-card-4" style="width: 50%">
+     <div class="w3-card-4" style="width:30%">
        <img src="flashcards.jpg" alt="Flash Cards" style="width:100%">
-       <div class="w3-container">
+       <div class="w3-container" style="text-align: center">
          <p> Free Practice Flash Cards </p>
        </div>                          
      </div>
