--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
   
 <body>
   <div class="w3-container w3-tangerine">
-    <header class="w3-center">
+    <div class="w3-center">
       <h1> Poema Academy </h1>
       <h3> Classical Math Education for Every God's Child <h3>
-    </header>
+    </div>
  
     <div class="w3-row">
                        
@@ -44,6 +44,7 @@
          <p> Free Practice Flash Cards </p>
        </div>                          
      </div>
+      
     </div>
   </div>
 </body>
