--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   
 <body>
   <div class="w3-container w3-tangerine">
-    <div class="w3-center w3-tangerine">
+    <div class="w3-center">
       <h1> Poema Academy </h1>
       <h3> Classical Math Education for Every God's Child <h3>
     </div>
