--- a/index.html
+++ b/index.html
@@ -31,14 +31,14 @@
         </div>
        </div>
                                
-       <div class="w3-card-4" style="width:30%">
+       <div class="w3-card-4 w3-third" >
         <img src="textbooks.jpg" alt="Textbooks" style="width:100%">
         <div class="w3-container">
           <p> Free Web Textbooks </p>
          </div>
         </div>
                                  
-       <div class="w3-card-4" style="width:30%">
+       <div class="w3-card-4 w3-third">
          <img src="flashcards.jpg" alt="Flash Cards" style="width:100%">
          <div class="w3-container" style="text-align: center">
            <p> Free Practice Flash Cards </p>
