--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
   
 <body>
-  <div class="w3-container w3-tangerine">
+  <div class="w3-container w3-tangerine w3-panel">
     <div class="w3-center">
       <h1> Poema Academy </h1>
       <h3> Classical Math Education for Every God's Child <h3>
