--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
  
     <div class="w3-row">
                        
-      <div class="w3-card-4 w3-third">
+      <div class="w3-card-4 w3-third w3-round-xlarge">
         <img src="onlineClasses.jpg" alt="online classes" style="width:100%">
         <div class="w3-container">
           <p class="w3-center"> Free online classes </p>
