--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
       <h1> Poema Academy </h1>
       <h3> Classical Math Education for Every God's Child <h3>
     </div>
- 
+ <br> <br> <br>
     <div class="w3-row">
                        
-      <div class="w3-card-4 w3-third w3-round-xlarge">
+      <div class="w3-card-4 w3-third w3-border w3-round-xlarge">
         <img src="onlineClasses.jpg" alt="online classes" style="width:100%">
         <div class="w3-container">
           <p class="w3-center"> Free online classes </p>
