--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <h3> Classical Math Education for Every God's Child <h3>
     </div>
  <br> <br> <br>
-    <div class="w3-row-padding">
+    <div class="w3-row-padding w3-center">
                        
       <div class="w3-card-4 w3-col l3 w3-border w3-round-xlarge">
         <img src="onlineClasses.jpg" alt="online classes" style="width:100%">
