--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           <p> Free Web Textbooks </p>
          </div>
         </div>
-                                 
+      <div class="w3-panel w3-card-4 w3-col l1" > </div>                       
        <div class="w3-card-4 w3-col l3">
          <img src="flashcards.jpg" alt="Flash Cards" style="width:100%">
          <div class="w3-container" style="text-align: center">
