--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       
        <div class="w3-panel w3-card-4 w3-col l1" > </div> 
       
-       <div class="w3-panel w3-card-4 w3-col l3 w3-border w3-round-xlarge" >
+       <div class="w3-card-4 w3-col l3 w3-border w3-round-xlarge" >
         <img src="textbooks.jpg" alt="Textbooks" style="width:100%">
         <div class="w3-container">
           <p> Free Web Textbooks </p>
