--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 <body>
   <div class="w3-container w3-tangerine w3-panel">
     <div class="w3-center">
-      <h1> Poema Academy </h1>
-      <h3> Classical Math Education for Every God's Child <h3>
+      <p> Poema Academy </p>
+      <p> Classical Math Education for Every God's Child </p>
     </div>
  <br> <br> <br>
     <div class="w3-row w3-center">
