--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <div class="w3-container w3-tangerine w3-panel">
     <div class="w3-center">
       <p class="w3-jumbo"> Poema Academy </p>
-      <p class=w3-xxxlarge"> Classical Math Education for Every God's Child </p>
+      <p class="w3-xxxlarge"> Classical Math Education for Every God's Child </p>
     </div>
  <br> 
     <div class="w3-row w3-center">
