--- a/flashcards.html
+++ b/flashcards.html
@@ -57,7 +57,7 @@
         <div class="w3-container"> </div>
         <img src="onlineClasses.jpg" alt="online classes" style="width:100%">
         <div class="w3-container">
-          <p class="w3-center w3-xxxlarge"> Arithmetic </p>
+          <p class="w3-center w3-xxxlarge"> Geometry </p>
         </div>
        </div>
       
@@ -66,7 +66,7 @@
        <div class="w3-card-4 w3-col l3 w3-border w3-round-xlarge" >
         <img src="textbooks.jpg" alt="Textbooks" style="width:100%">
         <div class="w3-container">
-          <p class="w3-xxxlarge"> Pre-algebra </p>
+          <p class="w3-xxxlarge"> Pre-calculus </p>
          </div>
         </div>
       
@@ -75,7 +75,7 @@
        <div class="w3-card-4 w3-col l3 w3-border w3-round-xlarge">
          <img src="flashcards.jpg" alt="Flash Cards" style="width:100%">
          <div class="w3-container" style="text-align: center">
-           <p class="w3-xxxlarge"> Algebra </p>
+           <p class="w3-xxxlarge"> Calculus </p>
          </div>                          
        </div>
       </div>
