--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     .w3-tangerine {
       font-family: "Tangerine", serif;
     }
+    .w3-bold {
+      font-weight: bold;
+    }
     body {
       background-color:lightblue;
     }
@@ -18,7 +21,7 @@
 <body>
   <div class="w3-container w3-tangerine w3-panel">
     <div class="w3-center">
-      <p class="w3-jumbo"> Poema Academy </p>
+      <p class="w3-jumbo w3-bold"> Poema Academy </p>
       <p class="w3-xxxlarge"> Classical Math Education for Every God's Child </p>
     </div>
  <br> 
