--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
   </div>
   
 <footer> 
-  <p style="w3-tangerine w3-large"> &copy 2020 Poema Media </p>
+  <p style="w3-tangerine w3-large w-center"> &copy 2020 Poema Media </p>
 </footer>
 </body>
 </html>
