--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
     body {
       background-color:lightblue;
     }
+  a.link {
+    text-decoration: none;
+    color: blue;
+    }
   </style>
 </head>
   
@@ -49,7 +53,7 @@
        <div class="w3-card-4 w3-col l3 w3-border w3-round-xlarge">
          <img src="flashcards.jpg" alt="Flash Cards" style="width:100%">
          <div class="w3-container" style="text-align: center">
-           <p class="w3-xxxlarge"> Free Practice Flash Cards </p>
+           <p class="w3-xxxlarge"> <a href="https://pingnan.github.io/flashcards.html"> Free Practice Flash Cards <a> </p>
          </div>                          
        </div>
       
