--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
     </div>
   </div>
   
-<footer> 
+<div class="w3-container w3-panel"> 
   <p style="w3-tangerine w3-large w-center"> &copy 2020 Poema Media </p>
-</footer>
+</div>
 </body>
 </html>
