--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
   </div>
   
 <div class="w3-container w3-panel"> 
-  <p style="w3-tangerine w3-large w-center"> &copy 2020 Poema Media </p>
+  <p style="w3-tangerine w3-large w3-center"> &copy 2020 Poema Media </p>
 </div>
 </body>
 </html>
