--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
          </div>                          
        </div>
       
+      </div>
     </div>
   </div>
-  
 <div class="w3-container w3-panel"> 
   <p style="w3-tangerine w3-large w3-center"> &copy 2020 Poema Media </p>
 </div>
