--- a/onlineClasses.html
+++ b/onlineClasses.html
@@ -25,7 +25,7 @@
                        
       <div class="w3-card-4 w3-col l3 w3-border w3-round-xlarge">
         <div class="w3-container"> </div>
-        <img src="onlineClasses.jpg" alt="online classes" style="width:100%">
+        <img src="" alt="online classes" style="width:100%">
         <div class="w3-container">
           <p class="w3-center w3-xxxlarge"> Arithmetic </p>
         </div>
