--- a/onlineClasses.html
+++ b/onlineClasses.html
@@ -43,7 +43,7 @@
       <div class="w3-panel w3-card-4 w3-col l1" > </div>      
       
        <div class="w3-card-4 w3-col l3 w3-border w3-round-xlarge">
-         <img src="https://pingnan.github.io/algebra/flyingEage.jpg" alt="algebra class" style="width:100%">
+         <img src="https://pingnan.github.io/algebra/flyingEagle.jpg" alt="algebra class" style="width:100%">
          <div class="w3-container" style="text-align: center">
            <p class="w3-xxxlarge"> Algebra </p>
          </div>                          
