--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <div class="w3-container"> </div>
         <img src="onlineClasses.jpg" alt="online classes" style="width:100%">
         <div class="w3-container">
-          <p class="w3-center w3-xxxlarge"> Free online classes </p>
+          <p class="w3-center w3-xxxlarge"> <a href="https://pingnan.github.io/onlineClasses.html"> Free online classes </a> </p>
         </div>
        </div>
       
