--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
        <div class="w3-card-4 w3-col l3 w3-border w3-round-xlarge" >
         <img src="textbooks.jpg" alt="Textbooks" style="width:100%">
         <div class="w3-container">
-          <p class="w3-xxxlarge"> Free Web Textbooks </p>
+          <p class="w3-xxxlarge"> <a href="https://pingnan.github.io/webTextbooks.html"> Free Web Textbooks </a> </p>
          </div>
         </div>
       
