--- a/webTextbooks.html
+++ b/webTextbooks.html
@@ -34,7 +34,7 @@
        <div class="w3-panel w3-card-4 w3-col l1" > </div> 
       
        <div class="w3-card-4 w3-col l3 w3-border w3-round-xlarge" >
-        <img src="https://pingnan.github.io/pre-algebra/huski.jpg" alt="free pre-algebra textbook" style="width:100%">
+        <img src="https://pingnan.github.io/pre-algebra/textbooks.jpg" alt="free pre-algebra textbook" style="width:100%">
         <div class="w3-container">
           <p class="w3-xxxlarge"> Pre-algebra </p>
          </div>
