--- a/index.html
+++ b/index.html
@@ -23,6 +23,12 @@
 </head>
   
 <body>
+  <div class="w3-bar w3-border w3-card-4 w3-light-grey w3-mobile">
+  <a href="#" class="w3-bar-item w3-button">Home</a>
+  <a href="#" class="w3-bar-item w3-button">Link 1</a>
+  <a href="#" class="w3-bar-item w3-button">Link 2</a>
+  <a href="#" class="w3-bar-item w3-button">Link 3</a>
+  </div>
   <div class="w3-container w3-tangerine w3-panel">
     <div class="w3-center">
       <p class="w3-jumbo w3-bold"> Poema Academy </p>
