--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <div class="w3-container w3-tangerine w3-panel">
     <div class="w3-bar w3-border w3-card-4 w3-light-grey">
       <a href="https://pingnan.github.io/index.html" class="w3-bar-item w3-button">Home</a>
-      <a href="#" class="w3-bar-item w3-button">Link 1</a>
+      <a href="https://pingnan.github.io/onlineClasses.html" class="w3-bar-item w3-button">Free Online Classes</a>
       <a href="#" class="w3-bar-item w3-button">Link 2</a>
       <a href="#" class="w3-bar-item w3-button">Link 3</a>
     </div>
