--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
 <body>
   <div class="w3-container w3-tangerine w3-panel">
     <div class="w3-bar w3-border w3-card-4 w3-light-grey">
-      <a href="https://pingnan.github.io/index.html" class="w3-bar-item w3-button">Home</a>
-      <a href="https://pingnan.github.io/onlineClasses.html" class="w3-bar-item w3-button">Free Online Classes</a>
-      <a href="#" class="w3-bar-item w3-button">Link 2</a>
-      <a href="#" class="w3-bar-item w3-button">Link 3</a>
+      <a href="https://pingnan.github.io/index.html" class="w3-bar-item w3-button" class="w3-xlarge">Home</a>
+      <a href="https://pingnan.github.io/onlineClasses.html" class="w3-bar-item w3-button"> Free Online Classes </a>
+      <a href="https://pingnan.github.io/webTextbooks.html" class="w3-bar-item w3-button"> Free Web Textbooks </a>
+      <a href="https://pingnan.github.io/flashcards.html" class="w3-bar-item w3-button"> Flash Cards </a>
     </div>
     
     <div class="w3-center">
