--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   
 <body>
   <div class="w3-container w3-tangerine w3-panel">
-    <div class="w3-bar w3-border w3-card-4 w3-light-blue">
+    <div class="w3-bar w3-border w3-card-4">
       <a href="https://pingnan.github.io/index.html" class="w3-bar-item w3-button" class="w3-xxlarge">Home</a>
       <a href="https://pingnan.github.io/onlineClasses.html" class="w3-bar-item w3-button"> Free Online Classes </a>
       <a href="https://pingnan.github.io/webTextbooks.html" class="w3-bar-item w3-button"> Free Web Textbooks </a>
