--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                        
       <div class="w3-card-4 w3-col l3 w3-border w3-round-xlarge">
         <div class="w3-container"> </div>
-        <img src="onlineClasses-profile.jpg" alt="online classes" style="width:100%">
+        <a href="https://pingnan.github.io/onlineClasses.html"> <img src="onlineClasses-profile.jpg" alt="online classes" style="width:100%"> </a>
         <div class="w3-container">
           <p class="w3-center w3-xxxlarge"> <a href="https://pingnan.github.io/onlineClasses.html"> Free online classes </a> </p>
         </div>
