--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 </head>
   
 <body>
-  <div class="w3-container w3-tangerine w3-panel w3-hover-light-blue">
-    <div class="w3-bar w3-border w3-card-4">
+  <div class="w3-container w3-tangerine w3-panel">
+    <div class="w3-bar w3-border w3-card-4 w3-hover-light-blue">
       <a href="https://pingnan.github.io/index.html" class="w3-bar-item w3-button"> <span class="w3-xxlarge"> Home </span> </a>
       <a href="https://pingnan.github.io/onlineClasses.html" class="w3-bar-item w3-button"> <span class="w3-xxlarge"> Online Classes </span> </a>
       <a href="https://pingnan.github.io/webTextbooks.html" class="w3-bar-item w3-button"> <span class="w3-xxlarge"> Web Textbooks </span></a>
@@ -66,9 +66,10 @@
       
       </div>
     </div>
+  
+  <div class="w3-container w3-panel"> <!-- the footer -->
+   <p style="w3-tangerine w3-large w3-center"> &copy 2020 Poema Media </p>
   </div>
-<div class="w3-container w3-panel"> 
-  <p style="w3-tangerine w3-large w3-center"> &copy 2020 Poema Media </p>
 </div>
 </body>
 </html>
