--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
 <body>
   <div class="w3-container w3-tangerine w3-panel">
     <div class="w3-bar w3-border w3-card-4">
-      <a href="https://pingnan.github.io/index.html" class="w3-bar-item w3-button"> <span class="w3-xxlarge"> Home </span> </a>
+      <a href="https://pingnan.github.io/index.html" class="w3-bar-item w3-button w3-hover-light-blue"> <span class="w3-xxlarge"> Home </span> </a>
       <a href="https://pingnan.github.io/onlineClasses.html" class="w3-bar-item w3-button w3-hover-light-blue"> <span class="w3-xxlarge"> Online Classes </span> </a>
-      <a href="https://pingnan.github.io/webTextbooks.html" class="w3-bar-item w3-button"> <span class="w3-xxlarge"> Web Textbooks </span></a>
-      <a href="https://pingnan.github.io/flashcards.html" class="w3-bar-item w3-button"> <span class="w3-xxlarge"> Flash Cards </span> </a>
+      <a href="https://pingnan.github.io/webTextbooks.html" class="w3-bar-item w3-button w3-hover-light-blue"> <span class="w3-xxlarge"> Web Textbooks </span></a>
+      <a href="https://pingnan.github.io/flashcards.html" class="w3-bar-item w3-button w3-hover-light-blue"> <span class="w3-xxlarge"> Flash Cards </span> </a>
     </div>
     
     <div class="w3-center">
