--- a/tasc-math/testFlashCard.html
+++ b/tasc-math/testFlashCard.html
@@ -6,6 +6,9 @@
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="https://pingnan.github.io/flashcard.css" type="text/css"> </link>
 <style>
+  .w3-comic {
+    font-family: "Comic Sans MS", cursive, sans-serif;
+    }
   .w3-tangerine {
       font-family: "Tangerine", serif;
     }
@@ -27,7 +30,7 @@ MathJax = {
 </script>
 <body>
 
-<div id="problem" class="w3-tangerine w3-xxlarge">
+<div id="problem" class="w3-comic w3-xxlarge">
 <p style="text-align: center;"> Problem </p>
 <p> 26. To make the top of a dining room table, 
   Craig glues a piece of oak that is `5 / 16` inch thick to a piece of pine that is `7 / 8` inch thick. 
