--- a/tasc-math/testFlashCard.html
+++ b/tasc-math/testFlashCard.html
@@ -30,7 +30,7 @@ MathJax = {
 </script>
 <body>
 
-<div id="problem" class="w3-comic w3-xxlarge">
+<div id="problem" class="w3-comic w3-large">
 <p style="text-align: center;"> Problem </p>
 <p> 26. To make the top of a dining room table, 
   Craig glues a piece of oak that is `5 / 16` inch thick to a piece of pine that is `7 / 8` inch thick. 
