--- a/tasc-math/testFlashCard.html
+++ b/tasc-math/testFlashCard.html
@@ -30,7 +30,7 @@ MathJax = {
 </script>
 <body>
 
-<div id="problem" class="w3-comic w3-large">
+<div id="problem" class="w3-comic w3-xlarge">
 <p style="text-align: center;"> Problem </p>
 <p> 26. To make the top of a dining room table, 
   Craig glues a piece of oak that is `5 / 16` inch thick to a piece of pine that is `7 / 8` inch thick. 
@@ -43,7 +43,7 @@ C. `1 1 / 4` <br>
 D. `1 9/16`
 </p>
 </div>
-<div id="answer" class="w3-tangerine w3-xxlarge" style="display:none">
+<div id="answer" class="w3-comic w3-xlarge" style="display:none">
 <p style="text-align: center;"> Solution </p>
 <p>
 B. `1 3/16` <br> <br>
