--- a/tasc-math/tms2p4-1prob26card.html
+++ b/tasc-math/tms2p4-1prob26card.html
@@ -3,9 +3,23 @@
 <title>MathJax AsciiMath Test Page</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link href='https://fonts.googleapis.com/css?family=Sofia' rel='stylesheet'> 
-
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="https://pingnan.github.io/flashcard.css" type="text/css"> </link>
-
+<style>
+  .w3-comic {
+    font-family: "Comic Sans MS", cursive, sans-serif;
+    }
+  .w3-tangerine {
+      font-family: "Tangerine", serif;
+    }
+    .w3-bold {
+      font-weight: bold;
+    }
+    body {
+      background-color:lightblue;
+    }
+  </style>
+  
 <script>
 MathJax = {
   loader: {load: ['input/asciimath', 'output/chtml']}
