--- a/tasc-math/tms2p4-1prob26card.html
+++ b/tasc-math/tms2p4-1prob26card.html
@@ -44,7 +44,7 @@ C. `1 1 / 4` <br>
 D. `1 9/16`
 </p>
 </div>
-<div id="answer" style="display:none">
+<div id="answer" style="display:none" class="w3-comic w3-large">
 <p style="text-align: center;"> Solution </p>
 <p>
 B. `1 3/16` <br> <br>
