--- a/tasc-math/tms2p4-1prob27card.html
+++ b/tasc-math/tms2p4-1prob27card.html
@@ -2,6 +2,9 @@
 <head>
   <title> TASC Math Prep </title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Tangerine"> 
+  <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+  <link rel="stylesheet" href="https://pingnan.github.io/flashcard.css" type="text/css"> </link>
 <script>
 MathJax = {
   loader: {load: ['input/asciimath', 'output/chtml']}
@@ -11,14 +14,10 @@ MathJax = {
 <script type="text/javascript" id="MathJax-script" async
   src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/startup.js">
 </script> 
-<link href='https://fonts.googleapis.com/css?family=Sofia' rel='stylesheet'>
-
-<link rel="stylesheet" href="https://pingnan.github.io/flashcard.css" type="text/css">
-<!-- <script src="flashCard.js"> </script> -->
 </head>
   
 <body>
-<div id="problem">
+<div id="problem" class="w3-comic w3-large">
 <p> <!-- Problem statement -->
 <p style="text-align: center;"> Problem </p>
   <p> 27. Carol will use two bolts to assemble a book cart. 
@@ -34,7 +33,7 @@ D. `1 3/4`
 </div>
   
 <!-- The answer card -->
-<div id="answer" style="display:none">
+<div id="answer" style="display:none" class="w3-comic w3-large">
 <p style="text-align: center;"> Solution </p>
 <p> <!-- The Solution -->
 C. `1 5/8` <br> <br>
