--- a/tasc-math/tms2p4-1prob27card.html
+++ b/tasc-math/tms2p4-1prob27card.html
@@ -5,6 +5,20 @@
   <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Tangerine"> 
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
   <link rel="stylesheet" href="https://pingnan.github.io/flashcard.css" type="text/css"> </link>
+  <style>
+  .w3-comic {
+    font-family: "Comic Sans MS", cursive, sans-serif;
+    }
+  .w3-tangerine {
+      font-family: "Tangerine", serif;
+    }
+    .w3-bold {
+      font-weight: bold;
+    }
+    body {
+      background-color:lightblue;
+    }
+  </style>
 <script>
 MathJax = {
   loader: {load: ['input/asciimath', 'output/chtml']}
