--- a/tasc-math/tms2p4-1prob29card.html
+++ b/tasc-math/tms2p4-1prob29card.html
@@ -1,6 +1,24 @@
 <html>
 <head>
   <title> TASC Math Prep </title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Tangerine"> 
+  <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+  <link rel="stylesheet" href="https://pingnan.github.io/flashcard.css" type="text/css"> </link>
+  <style>
+  .w3-comic {
+    font-family: "Comic Sans MS", cursive, sans-serif;
+    }
+  .w3-tangerine {
+      font-family: "Tangerine", serif;
+    }
+    .w3-bold {
+      font-weight: bold;
+    }
+    body {
+      background-color:lightblue;
+    }
+  </style>
 <script>
 MathJax = {
   loader: {load: ['input/asciimath', 'output/chtml']}
@@ -16,7 +34,7 @@ MathJax = {
 </head>
   
 <body>
-<div id="problem">
+<div id="problem" class="w3-comic w3-large">
   
 <p style="text-align: center;"> Problem </p>
   
@@ -35,7 +53,7 @@ D. `3 7/12`
 </div>
   
 <!-- The answer card -->
-<div id="answer" style="display:none">
+<div id="answer" style="display:none" class="w3-comic w3-large">
 
 <p style="text-align: center;"> Solution </p>
 
