--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
       </div>
     </div>
   
-  <div class="w3-container w3-panel"> <!-- the footer -->
-   <p class="w3-tangerine w3-large w3-center"> &copy 2020 Poema Media </p>
+  <div class="w3-container w3-panel w3-tangerine"> <!-- the footer -->
+   <p class="w3-large w3-center"> &copy 2020 Poema Media </p>
   </div>
 </div>
 </body>
