--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     </div>
   
   <div class="w3-container w3-panel w3-tangerine"> <!-- the footer -->
-   <p class="w3-large w3-center"> &copy 2020 Poema Media </p>
+   <p class="w3-xlarge w3-center"> &copy 2020 Poema Media </p>
   </div>
 </div>
 </body>
