--- a/index.html
+++ b/index.html
@@ -68,12 +68,12 @@
     </div>
   
   <div class="w3-container w3-panel w3-tangerine"> <!-- the footer -->
-   <p class="w3-xxlarge w3-center"> &copy 2020 Poema Media </p>
-   <a href="https://www.mathjax.org">
-    <img title="Powered by MathJax"
-    src="https://www.mathjax.org/badge/badge-square-3.png"
-    border="0" alt="Powered by MathJax" />
-   </a>
+    <p class="w3-xxlarge w3-center"> &copy 2020 Poema Media </p>
+    <a href="https://www.mathjax.org">
+      <img title="Powered by MathJax"
+      src="https://www.mathjax.org/badge/badge.gif"
+      border="0" alt="Powered by MathJax" />
+    </a>
   </div>
 </div>
 </body>
