--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
       </div>
     </div>
   
-  <div class="w3-container w3-panel w3-tangerine"> <!-- the footer -->
+  <div class="w3-container w3-panel w3-tangerine w3-row"> <!-- the footer -->
     <p class="w3-xxlarge w3-center"> &copy 2020 Poema Media </p>
     <a href="https://www.mathjax.org">
       <img title="Powered by MathJax"
