--- a/algebra/alCh1CardSet1.html
+++ b/algebra/alCh1CardSet1.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Pre-algebra Chapter 3 Practice Cards</title>
+<title>Algebra Chapter 1 Practice Cards</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css"> </link>
   <link href='https://fonts.googleapis.com/css?family=Sofia' rel='stylesheet'> </link>
