--- a/algebra/alCh1CardSet1.html
+++ b/algebra/alCh1CardSet1.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css"> </link>
   <link href='https://fonts.googleapis.com/css?family=Sofia' rel='stylesheet'> </link>
   <link rel="stylesheet" href="https://pingnan.github.io/smallFlashcard.css" type="text/css"> </link>
+  <script src="https://www.w3schools.com/lib/w3.js"></script>
 
 <script>
 MathJax = {
