--- a/algebra/alCh1CardSet1.html
+++ b/algebra/alCh1CardSet1.html
@@ -3,34 +3,49 @@
 <head>
 <title>Algebra Chapter 1 Practice Cards</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css"> </link>
-  <link href='https://fonts.googleapis.com/css?family=Sofia' rel='stylesheet'> </link>
-  <link rel="stylesheet" href="https://pingnan.github.io/smallFlashcard.css" type="text/css"> </link>
-  <script src="https://www.w3schools.com/lib/w3.js"></script>
-
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css"> </link>
+<link rel="stylesheet" href="https://pingnan.github.io/smallFlashcard.css" type="text/css"> </link>
+<script src="https://www.w3schools.com/lib/w3.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script>
-MathJax = {
-  loader: {load: ['input/asciimath', 'output/chtml']}
-}
+  MathJax = {
+    loader: {load: ['input/asciimath', 'output/chtml']}
+  }
 </script>
 <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
 <script type="text/javascript" id="MathJax-script" async
   src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/startup.js">
 </script>
+<script>
+$(document).ready(function(){
+  $("#btn1").click(function(){
+    $("#problem").hide();
+    $("#solution").show();
+  });
+  $("#btn2").click(function(){
+    $("p").show();
+  });
+});
+</script>
+</head>
+<!-- Body -->
 <body>
 
-<div class="w3-card-4 w3-container" id="problem">
-<p style="text-align: center;">  
-`1/5 + 1/7 =` 
-</p>
-</div>
+<div class="w3-container">
+  <div class="w3-card-4" id="problem">
+    <p style="text-align: center;">  
+      `1/5 + 1/7 =` 
+    </p>
+  </div>
 
-<div id="answer" class="w3-card-4 w3-container" style="display:none">
-<p style="text-align: center;"> 
-`12/35`</p>
+  <div id="answer" class="w3-card-4" style="display:none">
+    <p style="text-align: center;"> 
+      `12/35`
+    </p>
+  </div>
+  <button id="btn1"> solution </button>
+  <button id="btn2"> problem </button>
 </div>
-  
-<script src="https://pingnan.github.io/flashCard.js" type="text/javascript"> </script>
 
 </body>
 </html>
