--- a/algebra/alCh1CardSet1.html
+++ b/algebra/alCh1CardSet1.html
@@ -20,7 +20,7 @@
 $(document).ready(function(){
   $("#btn1").click(function(){
     $("#problem").hide();
-    $("#solution").show();
+    $("#answer").show();
   });
   $("#btn2").click(function(){
     $("p").show();
