--- a/algebra/alCh1CardSet1.html
+++ b/algebra/alCh1CardSet1.html
@@ -23,7 +23,8 @@ $(document).ready(function(){
     $("#answer").show();
   });
   $("#btn2").click(function(){
-    $("p").show();
+    $("#problem").show();
+    $("#answer").hide();
   });
 });
 </script>
