--- a/algebra/alCh1CardSet1.html
+++ b/algebra/alCh1CardSet1.html
@@ -20,7 +20,7 @@
 $(document).ready(function(){
   $("#problem").click(function(){
     $(this).hide();
-    $(this).next.show();
+    $("answer").next.show();
   });
 });
 </script>
@@ -40,8 +40,6 @@ $(document).ready(function(){
       `12/35`
     </p>
   </div>
-  <button id="btn1"> solution </button>
-  <button id="btn2"> problem </button>
 </div>
 
 </body>
