--- a/algebra/alCh1CardSet1.html
+++ b/algebra/alCh1CardSet1.html
@@ -20,7 +20,7 @@
 $(document).ready(function(){
   $("#problem").click(function(){
     $(this).hide();
-    $("answer").show();
+    $("#answer").show();
   });
 });
 </script>
