--- a/algebra/alCh1CardSet1.html
+++ b/algebra/alCh1CardSet1.html
@@ -18,7 +18,7 @@
 </script>
 <script>
 $(document).ready(function(){
-  $("#problem").mouseenter(function(){
+  $("#problem").click(function(){
     $("#answer").show();
     $(this).hide();
   });
