--- a/algebra/alCh1CardSet1.html
+++ b/algebra/alCh1CardSet1.html
@@ -38,13 +38,13 @@ $(document).ready(function(){
 <body>
 
 <div class="w3-container">
-  <div class="w3-card-4" id="problem">
+  <div class="w3-card-4 problem">
     <p style="text-align: center;">  
       `1/5 + 1/7 =` 
     </p>
   </div>
 
-  <div id="answer" class="w3-card-4" style="display:none">
+  <div class="w3-card-4 answer" style="display:none">
     <p style="text-align: center;"> 
       `12/35`
     </p>
