--- a/algebra/alTheorems.html
+++ b/algebra/alTheorems.html
@@ -55,13 +55,13 @@ $(document).ready(function(){
 <div class="w3-container">
   <div class="w3-card-4 problem">
     <p style="text-align: center;">  
-      `1/5 + 1/7 =` 
+      `Pythagorean Theorem` 
     </p>
   </div>
 
   <div class="w3-card-4 solution" style="display:none">
     <p style="text-align: center;"> 
-      `12/35`
+      `c^2 = a^2 + b^2 `
     </p>
   </div>
   <button> Solution </button>
