--- a/algebra/alTheorems.html
+++ b/algebra/alTheorems.html
@@ -52,7 +52,7 @@ $(document).ready(function(){
 <div class="w3-container">
   <div class="w3-card-4 problem">
     <p style="text-align: center;">  
-      `Pythagorean Theorem` 
+      Pythagorean Theorem
     </p>
   </div>
 
