--- a/algebra/alCh1CardSet1.html
+++ b/algebra/alCh1CardSet1.html
@@ -23,11 +23,11 @@ $(document).ready(function(){
       $(this).css("background-color", "lightgray");
     },  
     mouseleave: function(){
-      $(this).siblings(".answer").hide();
+      $(this).siblings(".solution").hide();
       $(this).siblings(".problem").show();
     }, 
     click: function(){
-      $(this).siblings(".answer").show();
+      $(this).siblings(".solution").show();
       $(this).siblings(".problem").hide();
     }  
   });
@@ -44,12 +44,12 @@ $(document).ready(function(){
     </p>
   </div>
 
-  <div class="w3-card-4 answer" style="display:none">
+  <div class="w3-card-4 solution" style="display:none">
     <p style="text-align: center;"> 
       `12/35`
     </p>
   </div>
-  <button> Answer </button>
+  <button> Solution </button>
 </div>
 
 </body>
