--- a/algebra/alCh1CardSet1.html
+++ b/algebra/alCh1CardSet1.html
@@ -16,23 +16,8 @@
 <script type="text/javascript" id="MathJax-script" async
   src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/startup.js">
 </script>
-<script>
-$(document).ready(function(){
-  $("button").on({
-    mouseenter: function(){
-      $(this).css("background-color", "lightgray");
-    },  
-    mouseleave: function(){
-      $(this).siblings(".solution").hide();
-      $(this).siblings(".problem").show();
-    }, 
-    click: function(){
-      $(this).siblings(".solution").show();
-      $(this).siblings(".problem").hide();
-    }  
-  });
-});
-</script>
+<script type="text/javascript"> src="https://pingnan.github.io/newFlashCard.js"> </script>
+
 </head>
 <!-- Body -->
 <body>
