--- a/classSchedule.html
+++ b/classSchedule.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Poema Academy</title>
+  <title>Class Schedule</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Tangerine"> 
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -23,8 +23,10 @@
 </head>
   
 <body>
-<!-- navigation bar -->
+
   <div class="w3-container w3-tangerine w3-panel">
+
+<!-- navigation bar -->
     <div class="w3-bar w3-border w3-card-2">
       <a href="https://pingnan.github.io/index.html" class="w3-bar-item w3-button w3-hover-light-blue"> <span class="w3-xxlarge"> Home </span> </a>
       <a href="https://pingnan.github.io/onlineClasses.html" class="w3-bar-item w3-button w3-hover-light-blue"> <span class="w3-xxlarge"> Online Classes </span> </a>
@@ -33,15 +35,14 @@
     </div>
 <!-- title -->    
     <div class="w3-center">
-      <p class="w3-jumbo w3-bold"> Poema Academy </p>
-      <p class="w3-xxxlarge"> Classical Math Education for Every God's Child </p>
+      <p class="w3-jumbo w3-bold"> Class Schedule </p>
     </div>
  <br> 
 
 <!-- body -->
   <div class="w3-container">
-    <ul class="w3-ul">
-      <li> <h2> Arithmetic </h2> </li>
+    <ul class="w3-ul w3-xlarge">
+      <li> <span class="w3-xxxlarge> Arithmetic </span> </li>
       <li> L1: Single digit addition & subtraction </li>
       <li> L2: Double digit addition and subtraction </li>
       <li> L3: Multiplication I </li>
