--- a/classSchedule.html
+++ b/classSchedule.html
@@ -42,7 +42,7 @@
 <!-- body -->
   <div class="w3-container">
     <ul class="w3-ul w3-xlarge">
-      <li> <span class="w3-xxxlarge> Arithmetic </span> </li>
+      <li> <span class="w3-xxxlarge"> Arithmetic </span> </li>
       <li> L1: Single digit addition & subtraction </li>
       <li> L2: Double digit addition and subtraction </li>
       <li> L3: Multiplication I </li>
